[gd_scene load_steps=2 format=2]

[ext_resource path="res://Code/Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 435.0
margin_top = 195.0
margin_right = 610.0
margin_bottom = 351.0
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 175.0
margin_bottom = 64.0
text = "play"

[node name="Edit" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 175.0
margin_bottom = 88.0
text = "Edit"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 175.0
margin_bottom = 112.0
text = "Quit"

[node name="Todo" type="RichTextLabel" parent="."]
margin_right = 296.0
margin_bottom = 280.0
text = "Tidy up Player
- Lerp animations for growing the box
- Find funny question font
- SFX board
-Cinematic Intro
- Early quit/end of game quit"
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
